Kexi Form Designer: fix crash when Cut, Undo, Cut is executed for a widget

BUG:288589
FIXED-IN:2.9.9

from Calligra 2.9 d52e37f27d45864